<resources>
    <string name="app_name">CalendarMobile</string>
    <string name="events">EVENTS:</string>
    <string name="add_event">Add Event</string>
    <string name="current_day">Current Day</string>
    <string name="event_title">Add Title</string>
    <string name="start_time">Start Time</string>
    <string name="starttime">StartTime</string>
    <string name="end_time">End Time</string>
    <string name="year">Year</string>
    <string name="month">Month/</string>
    <string name="rotation_text">listBeforeRotation</string>
    <string name="WW_Domain">https://calendarandroid.herokuapp.com</string>
    <string name="title">title</string>
    <string name="startTime">startTime</string>
    <string name="endTime">endTime</string>
    <string name="No_Connection">No Connection</string>
    <string name="id">id</string>
    <string name="select_time">Please select time.</string>
    <string name="delete_remainder">Do you want to Delete this remainder?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="week_day">weekDay</string>
    <string name="month_day">monthDay</string>
    <string name="month_text">month/</string>


</resources>
