<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.view.EventsActivity">

    <TextView
        android:id="@+id/currentDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_sides"
        android:layout_marginStart="@dimen/margin_sides"
        android:layout_marginTop="@dimen/margin_sides"
        android:paddingLeft="@dimen/padding_five"
        android:text="@string/current_day"
        android:textColor="@android:color/white"
        android:textSize="@dimen/twenty_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_sides"
        android:layout_marginStart="@dimen/margin_sides"
        android:layout_marginTop="@dimen/margin_sides"
        android:hint="@string/event_title"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentDay" />


    <TextView
        android:id="@+id/time_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sides"
        android:layout_marginTop="@dimen/margin_sides"
        android:hint="@string/start_time"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/textsize_eighteen"
        app:layout_constraintEnd_toStartOf="@+id/endtime_textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_title" />

    <TextView
        android:id="@+id/endtime_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_sides"
        android:layout_marginTop="@dimen/margin_sides"
        android:hint="@string/end_time"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="@dimen/textsize_eighteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/time_textView"
        app:layout_constraintTop_toBottomOf="@+id/event_title" />


    <Button
        android:id="@+id/pick_Time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_sides"
        android:layout_marginTop="@dimen/margin_sides"
        android:layout_weight="1"
        android:text="@string/starttime"
        app:layout_constraintEnd_toStartOf="@+id/pick_TimeEnd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_textView" />

    <Button
        android:id="@+id/pick_TimeEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_sides"
        android:layout_marginTop="@dimen/margin_sides"
        android:layout_weight="1"
        android:text="@string/end_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pick_Time"
        app:layout_constraintTop_toBottomOf="@+id/endtime_textView" />


    <Button
        android:id="@+id/addEvent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_sides"
        android:layout_marginStart="@dimen/margin_sides"
        android:layout_marginTop="@dimen/margin_sides"
        android:text="@string/add_event"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_Time" />

    <TextView
        android:id="@+id/event_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="@dimen/padding_five"
        android:text="@string/events"
        android:textColor="@android:color/white"
        android:textSize="@dimen/twenty_textsize"
        app:layout_constraintEnd_toStartOf="@+id/retry_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEvent_btn" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/events_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_sides"
        android:layout_marginStart="@dimen/margin_sides"
        android:layout_marginTop="@dimen/margin_sides"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_info" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Retry"
        android:textColor="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/event_info"
        app:layout_constraintTop_toBottomOf="@+id/addEvent_btn"
        tools:text="Retry" />

</android.support.constraint.ConstraintLayout>